// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetModal snapshot(Draw) 1`] = `
<div
  className="sc-gueYoa kpARvP"
>
  <div
    className="sc-dmqHEX gftNPs"
  >
    <p
      className="sc-hLseeU kInydB"
    >
      Game Result
    </p>
    <p
      className="sc-eDDNvR fdklIa"
    >
      Draw!
    </p>
    <button
      className="sc-beqWaB eichdE"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 1) 1`] = `
<div
  className="sc-gueYoa kpARvP"
>
  <div
    className="sc-dmqHEX gftNPs"
  >
    <p
      className="sc-hLseeU kInydB"
    >
      Game Result
    </p>
    <p
      className="sc-eDDNvR fdklIa"
    >
      Player 1 win!
    </p>
    <button
      className="sc-beqWaB eichdE"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 2) 1`] = `
<div
  className="sc-gueYoa kpARvP"
>
  <div
    className="sc-dmqHEX gftNPs"
  >
    <p
      className="sc-hLseeU kInydB"
    >
      Game Result
    </p>
    <p
      className="sc-eDDNvR fdklIa"
    >
      Player 2 win!
    </p>
    <button
      className="sc-beqWaB eichdE"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;
